src/main/java/com/example/articles/errors/ErrorResponse.kt
package com.example.articles.errors

data class ErrorResponse(
    val status: Int,
    val message: String?
)